pages/adminPage/index.css
main{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
}

header{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 800px;
    width: 100%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    height: 80px;
}

.headerLogo{
    display: flex;
    align-items: center;
    gap: 10px;
}

#title{
    color: var(--color-black);
    font-weight: 700;
}

#logout{
    text-decoration: none;
    border: 1px solid var(--color-blue);
    color: var(--color-blue);
    font-weight: 700;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px;
    width: 80px;
    font-size: var(--font-size-4);
}

section{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.headerDepartments{
    margin-top: 30px;
    display: flex;
    justify-content: center;
    gap: 240px;
    align-items: center;
}

.departments{
    font-size: var(--font-size-1);
    font-weight: 700;
}

select{
    border-radius: 15px;
    font-size: var(--font-size-4);
    height: 28px;
    width: 230px;
    padding-left: 30px;
}

#creatDepartments{
    cursor: pointer;
    background-color: var(--color-blue);
    color: var(--color-white);
    font-size: var(--font-size-3);
    width: 150px;
    height: 50px;
    border: none;
    display: flex;
    align-items: center;
    justify-content: baseline;
    padding-left: 30px;

}

ul{

    background-color: #F8F8F8;;
    margin-top: 40px;
    list-style: none;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5%;
    flex-wrap: wrap;
    overflow-y: scroll;
    height: 270px;
    width: 50%;
}

::-webkit-scrollbar{
    color: var(--color-blue);
}

::-webkit-scrollbar-thumb{
    background-color: var(--color-blue);
}

li{
    background-color: var(--color-white);
    width: 40%;
    padding-left: 10px;
    border-bottom: 1px solid var(--color-blue);
    margin-bottom: 40px;

}

.titleDepartments{
    font-weight: 700;
    font-size: var(--font-size-3);
    margin-bottom: 5px;
    text-transform: capitalize;
}

.descriptionDepartments{
    font-size: var(--font-size-4);
    font-weight: 400;
    margin-bottom: 5px;
    text-transform: capitalize;
}

.nameCompany{
    margin-top: 5px;
    font-weight: 400;
    font-size: var(--font-size-4);
    margin-bottom: 15px;
}

.containerImgs{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    margin-bottom: 20px;
}

img{
    cursor: pointer;
}

.liUsers{
    margin-top: 30px;
}

.userSection{
    font-size: var(--font-size-1);
    font-weight: 700;
    margin-top: 50px;
}

